*SVN*

* Documentation: Active Record exceptions, destroy_all and delete_all.  #10444, #10447 [Michael Klishin]


*2.0.1* (December 7th, 2007)

* Removed query cache rescue as it could cause code to be run twice (closes #10408) [DHH]


*2.0.0* (December 6th, 2007)

* Anchor DateTimeTest to fixed DateTime instead of a variable value based on Time.now#advance#to_datetime, so that this test passes on 64-bit platforms running Ruby 1.8.6+ [Geoff Buesing]

* Fixed that the Query Cache should just be ignored if the database is misconfigured (so that the "About your applications environment" works even before the database has been created) [DHH]

* Fixed that the truncation of strings longer than 50 chars should use inspect
so newlines etc are escaped #10385 [Norbert Crombach]

* Fixed that habtm associations should be able to set :select as part of their definition and have that honored [DHH]

* Document how the :include option can be used in Calculations::calculate.  Closes #7446 [adamwiggins, ultimoamore]

* Fix typo in documentation for polymorphic associations w/STI. Closes #7461 [johnjosephbachir]

* Reveal that the type option in migrations can be any supported column type for your database but also include caveat about agnosticism. Closes #7531 [adamwiggins, mikong]

* More complete documentation for find_by_sql. Closes #7912 [fearoffish]

* Added ActiveRecord::Base#becomes to turn a record into one of another class (mostly relevant for STIs) [DHH]. Example:

    render :partial => @client.becomes(Company) # renders companies/company instead of clients/client

* Fixed that to_xml should not automatically pass :procs to associations included with :include #10162 [Chu Yeow]

* Fix documentation typo introduced in [8250]. Closes #10339 [Henrik N]

* Foxy fixtures: support single-table inheritance.  #10234 [tom]

* Foxy fixtures: allow mixed usage to make migration easier and more attractive.  #10004 [lotswholetime]
